--- a/views/stock_location.xml
+++ b/views/stock_location.xml
@@ -13,6 +13,17 @@
                 </field>
             </field>
         </record>
+
+       <record id="stock_warehouse_inherit" model="ir.ui.view">
+            <field name="name">stock.warehouse.view.form.inherit</field>
+            <field name="model">stock.warehouse</field>
+            <field name="inherit_id" ref="stock.view_warehouse"/>
+            <field name="arch" type="xml">
+                <field name="partner_id" position="after">
+                    <field name="user_id"/>
+                </field>
+            </field>
+        </record>
         
     </data>
 </odoo>
