--- a/views/stock_quant.xml
+++ b/views/stock_quant.xml
@@ -17,6 +17,22 @@
                 </field>
             </field>
         </record>
+        
+        <record id="stock_quant_user_inherit" model="ir.ui.view">
+            <field name="name">stock.quant.view.user.form.inherit</field>
+            <field name="model">stock.quant</field>
+            <field name="inherit_id" ref="stock.view_stock_quant_tree"/>
+            <field name="arch" type="xml">
+                <field name="available_quantity" position="replace">
+                    <field name="invisi_qty" invisible="1"/>
+                    <field name="available_quantity" attrs="{'invisible': [('invisi_qty', '==', 1)]}" modifiers="{'readonly':true}"/>
+                </field>
+                <field name="quantity" position="replace">
+                    <field name="invisi_qty" invisible="1"/>
+                    <field name="quantity" attrs="{'invisible': [('invisi_qty', '==', 1)]}" on_change="1" modifiers="{'readonly':true}"/>
+                </field>
+            </field>
+        </record>
     
     </data>
 </odoo>
